--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ref-array",
+  "name": "@ammora/ref-array",
   "description": "Create C \"array\" instances on top of Buffers",
   "keywords": [
     "array",
     "ref"
   ],
-  "version": "2.0.0",
+  "version": "2.1.0",
   "author": "Nathan Rajlich <nathan@tootallnate.net> (http://tootallnate.net)",
   "repository": {
     "type": "git",
@@ -17,9 +17,9 @@
     "test": "node-gyp rebuild --directory test && mocha -gc-global --expose-gc --reporter spec"
   },
   "dependencies": {
+    "@ammora/ref": "github:ammora-team/ref#node-13",
     "array-index": "1",
-    "debug": "4",
-    "ref": "lxe/ref#node-12"
+    "debug": "4"
   },
   "devDependencies": {
     "bindings": "1",
